# le-rf-wm

./: .gitignore  CLAUDE.md  README.md  RESULTS.md  audit_encoder.py  audit_wiring.py  dataset.py  encoder.py  environment.json  environment_v1.json  eval_baselines.py  eval_diagnostics.py  eval_regimes.py  eval_surprise.py  jepa.py  main.py  model_card.md  module.py  pyproject.toml  requirements_frozen.txt  run_all_evals.sh  scene_metadata.json  setup_runpod.sh  smoke_test.py  train_rf.py
config/eval/: rf.yaml
config/train/: lewm_rf.yaml
decoder/: attention_proxy.py  cache_embeddings.py  cache_patch_embeddings.py  compute_logmag.py  finetune_predicted.py  patch_decoder.py  train_decoder.py  train_patch_decoder.py
demo/backend/: README.md  imagination_service.py  render.py  requirements.txt  server.py
demo/frontend/: package-lock.json  package.json
docs/: DATASET.md  DEMO.PRD.MD  RESULTS.md
evals/: eval_baselines.py  eval_diagnostics.py  eval_regimes.py  eval_rf.py  eval_surprise.py
exp_results/: eval_numpreds4_diagnostics.txt
mae/: eval_imagination.py  imagine.py  mae.py  perturbations.py  train_bridge.py  train_mae.py  verify_mae.py
presentation/: build.js
presentation/slides/: slide01-title.html  slide02-motivation.html  slide02-problem.html  slide03-architecture.html  slide03-task.html  slide04-data.html  slide04-jepa.html  slide05-architecture.html  slide05-evolution.html  slide06-dataset.html  slide06-results.html  slide08-mae.html  (+20 more)
results/: v0_eval_rf.json  v0_vs_v1_comparison.json  v1_eval_rf.json
scripts/: audit_wiring.py  run_all_evals.sh
(+12 files in other folders)
